# weebsite

./: Cargo.toml  Dockerfile
blogs/: rust-axum-tutorial.md  welcome.md
src/: main.rs
src/handlers/: blogs.rs  home.rs  mod.rs  projects.rs
src/models/: blog.rs  mod.rs  project.rs
src/routes/: blogs.rs  home.rs  mod.rs  projects.rs
src/services/: blog_service.rs  mod.rs  project_service.rs  templating.rs
src/static/: styles.css
templates/: blog_list.html  blog_post.html  home.html  layout.html  projects.html
